--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "dateformat": "~1.0.8-1.2.3 ",
     "i18n": "~0.5.0",
     "unorm": "~1.3.3",
-    "cheerio": "~0.13.0"
+    "cheerio": "~0.13.0",
+    "ip": "~0.3.1",
+    "airplay-xbmc": "~0.2.7",
+    "chromecast-js": "~0.0.5"
   },
   "devDependencies": {
   },
