--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "dateformat": "~1.0.8-1.2.3 ",
     "i18n": "~0.5.0",
     "unorm": "~1.3.3",
-    "cheerio": "~0.13.0"
+    "cheerio": "~0.13.0",
+    "nedb": "^0.10.5"
   },
   "devDependencies": {
   },
