--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "i18n": "~0.5.0",
     "unorm": "~1.3.3",
     "cheerio": "~0.13.0",
-    "nedb": "^0.10.5"
+    "nedb": "^0.10.5",
+    "json-rpc2": "^0.8.1"
   },
   "devDependencies": {
   },
