--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "window": {
     "title": "Flixtor",
     "icon": "images/flixtor-ico.png",
-    "toolbar": true,
+    "toolbar": false,
     "frame": false,
     "width": 1280,
     "height": 790,
@@ -35,7 +35,9 @@
     "unorm": "~1.3.3",
     "cheerio": "~0.13.0",
     "nedb": "^0.10.5",
-    "json-rpc2": "^0.8.1"
+    "json-rpc2": "^0.8.1",
+    "ip": "~0.3.1",
+    "nodebmc": "~0.0.5"
   },
   "devDependencies": {
   },
