--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "app://host/frames/series.html",
+  "main": "app://host/frames/movies.html",
   "name": "Flixtor",
   "description": "Movie and serie streamer",
   "version": "2.2.1",
@@ -10,7 +10,7 @@
   "window": {
     "title": "Flixtor",
     "icon": "images/flixtor-ico.png",
-    "toolbar": true,
+    "toolbar": false,
     "frame": false,
     "width": 1280,
     "height": 790,
