--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "main": "app://host/frames/series.html",
+  "main": "app://host/frames/movies.html",
   "name": "Flixtor",
   "description": "Movie and serie streamer",
-  "version": "2.2.1",
+  "version": "2.2.2",
   "repository": {
     "type": "git",
     "url": "git://github.com/FlixtorMe/FlixtorMe.git"
