Add missing modules in package.json

--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "nodebmc": "~0.0.5",
     "chromecast-js": "~0.1.4",
     "read-torrent": "~1.1.0",
-    "torrent-health": "~0.0.6"
+    "torrent-health": "~0.0.6",
+    "sha1": "~1.1.0",
+    "moment": "~2.8.4"
   },
   "devDependencies": {
   },
